Add feed builder + disable jekyll

--- a/.github/workflows/build-feed.yml
+++ b/.github/workflows/build-feed.yml
@@ -33,7 +33,7 @@ jobs:
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
-          git add docs/meta_used.csv
+          git add docs/meta_used.csv docs/.nojekyll
           git diff --cached --quiet && echo "No changes" && exit 0
           git commit -m "Update meta_used.csv"
           git push
